almost there implementing options for each message

--- a/static/index.html
+++ b/static/index.html
@@ -28,8 +28,8 @@
       integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
       crossorigin="anonymous">
     </script>
-    <script src="/mysocket.js">
-    </script>
+    <script src="/Msg.js"></script>
+    <script src="/mysocket.js"></script>
 
   </body>
 </html>
