--- a/static/index.html
+++ b/static/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Socket.IO chat</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link href="/style.css" rel="stylesheet"/>
   </head> 
   <body>
@@ -23,11 +25,7 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
-      crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="/Msg.js"></script>
     <script src="/mysocket.js"></script>
 
